--- a/assign.html/styles.css
+++ b/assign.html/styles.css
@@ -6,13 +6,6 @@ h2 {
     Color: #1100ff
 }
 
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
@@ -24,15 +17,12 @@ header {
     background-color: hsl(199, 87%, 59%);
     color: white;
     padding: 20px 0;
-}
-
-header .container {
-    text-align: center;
+    text-align: centre;
 }
 
 h1 {
-    margin: 0;
-    font-size: 2.5rem;
+   font-size: 2.5rem; 
+   margin: 0;
 }
 
 
@@ -44,6 +34,22 @@ footer {
 }
 
 footer p {
+    text-decoration: overline;
+    font-size: 1.rem; 
     margin: 0;
-    font-size: 1rem;
 }
+
+#nav {
+    background-color: black;
+     color: burlywood;
+     padding: 10px 0;
+     text-align: centre;
+}    
+    
+#nav a {
+    color: rgb(18, 3, 53);
+    text-decoration: overline;
+    font-size: 1;
+    margin: 0;
+}
+    
